--- a/user-service.yml
+++ b/user-service.yml
@@ -1,29 +1,35 @@
 server:
- port: 0
+  port: 0
 
 spring:
- application:
-   name: user-service
- datasource:
-   url: jdbc:h2:tcp://localhost/~/msa-user
-   username: sa
-   password:
-   driver-class-name: org.h2.Driver
- jpa:
-   database-platform: H2
-   show-sql: true
-   hibernate:
-     ddl-auto: create
+  application:
+    name: user-service
+  datasource:
+    url: jdbc:mariadb://localhost:3306/msa
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: xorkd13579!
+  jpa:
+    database-platform: H2
+    show-sql: true
+    hibernate:
+      ddl-auto: create
 
 eureka:
- instance:
-   instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
- client:
-   register-with-eureka: true
-   fetch-registry: true
-   service-url:
-     defaultZone: http://127.0.0.1:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://127.0.0.1:8761/eureka
 
 logging:
- level:
-   com.example.userservice.client: DEBUG
+  level:
+    com.example.userservice.client: DEBUG
+
+# #  datasource:
+# #    url: jdbc:h2:tcp://localhost/~/msa-user
+# #    username: sa
+# #    password:
+# #    driver-class-name: org.h2.Driver
