--- a/order-service.yml
+++ b/order-service.yml
@@ -5,12 +5,11 @@ spring:
   application:
     name: order-service
   datasource:
-    url: jdbc:h2:tcp://localhost/~/msa-user
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mariadb://localhost:3306/msa
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: xorkd13579!
   jpa:
-    database-platform: H2
     show-sql: true
     hibernate:
       ddl-auto: create
