--- a/apigateway-service.yml
+++ b/apigateway-service.yml
@@ -5,7 +5,8 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultzone: http//localhost:8761/eureka
+      defaultzone: http//3.36.183.94:8761/eureka
+#       defaultzone: http//localhost:8761/eureka
 
 spring:
   application:
